--- a/src/CaseGraph.App/CaseGraph.App.csproj
+++ b/src/CaseGraph.App/CaseGraph.App.csproj
@@ -8,6 +8,8 @@
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.3" />
+    <PackageReference Include="Microsoft.Msagl" Version="1.1.3" />
+    <PackageReference Include="Microsoft.Msagl.Drawing" Version="1.1.3" />
     <PackageReference Include="WPF-UI" Version="4.2.0" />
   </ItemGroup>
 
